fix wlogout uneven border

--- a/wlogout/style.css
+++ b/wlogout/style.css
@@ -1,48 +1,67 @@
 * {
-	background-image: none;
+  background-image: none;
 }
 
 window {
-	background-color: rgba(12, 12, 12, 0.9);
+  background-color: rgba(12, 12, 12, 0.9);
 }
 
 button {
-    color: #FFFFFF;
-	background-color: #1E1E1E;
-	border-style: solid;
-	border-width: 2px;
-    border-radius: 16px;
-	background-repeat: no-repeat;
-	background-position: center;
-	background-size: 25%;
-    margin: 5px;
+  color: #ffffff;
+  background-color: #1e1e1e;
+  border: none;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 25%;
+  border-radius: 12px;
+  margin: 5px;
 }
 
-button:focus, button:active, button:hover {
-	background-color: rgb(100, 0, 150);
-	outline-style: none;
+button:focus,
+button:active,
+button:hover {
+  background-color: rgb(100, 0, 150);
+  outline-style: none;
 }
 
 #lock {
-    background-image: image(url("/usr/share/wlogout/icons/lock.png"), url("/usr/local/share/wlogout/icons/lock.png"));
+  background-image: image(
+    url("/usr/share/wlogout/icons/lock.png"),
+    url("/usr/local/share/wlogout/icons/lock.png")
+  );
 }
 
 #logout {
-    background-image: image(url("/usr/share/wlogout/icons/logout.png"), url("/usr/local/share/wlogout/icons/logout.png"));
+  background-image: image(
+    url("/usr/share/wlogout/icons/logout.png"),
+    url("/usr/local/share/wlogout/icons/logout.png")
+  );
 }
 
 #suspend {
-    background-image: image(url("/usr/share/wlogout/icons/suspend.png"), url("/usr/local/share/wlogout/icons/suspend.png"));
+  background-image: image(
+    url("/usr/share/wlogout/icons/suspend.png"),
+    url("/usr/local/share/wlogout/icons/suspend.png")
+  );
 }
 
 #hibernate {
-    background-image: image(url("/usr/share/wlogout/icons/hibernate.png"), url("/usr/local/share/wlogout/icons/hibernate.png"));
+  background-image: image(
+    url("/usr/share/wlogout/icons/hibernate.png"),
+    url("/usr/local/share/wlogout/icons/hibernate.png")
+  );
 }
 
 #shutdown {
-    background-image: image(url("/usr/share/wlogout/icons/shutdown.png"), url("/usr/local/share/wlogout/icons/shutdown.png"));
+  background-image: image(
+    url("/usr/share/wlogout/icons/shutdown.png"),
+    url("/usr/local/share/wlogout/icons/shutdown.png")
+  );
 }
 
 #reboot {
-    background-image: image(url("/usr/share/wlogout/icons/reboot.png"), url("/usr/local/share/wlogout/icons/reboot.png"));
+  background-image: image(
+    url("/usr/share/wlogout/icons/reboot.png"),
+    url("/usr/local/share/wlogout/icons/reboot.png")
+  );
 }
